# logscanner

./: .gitignore  CHANGELOG.md  DropDownButton.js  DropDownButton.ts  README.md  eyesymbols.css  logview.css  logview.html  logview.ts  package-lock.json  pdm_build.py  pyproject.toml  pythonTest.py  tsconfig.json  webpack.config.js
font/font_subset/: readme  woff2Base64
html/: package-lock.json  package.json  webpack.config.js
html/src/: logview.html  logview.ts
pytest-logscanner/: pyproject.toml
pytest-logscanner/src/pytest_logscanner/: pytest_logscanner.py
src/: DropDownButton.module.css  DropDownButton.ts  logview.css  logview.html  logview.ts  tsconfig.json
src/logscanner/: logging.py
src/logview/: logging.py
tests/: conftest.py  example.conftest.py  test_file1.py
tests/plugin/exception/: conftest.py  test_exception.py  test_exception.py_test_exception.log.html
